EssentialAI: helper functions

--- a/EssentialAI/essentialai_huggingface_inference.ipynb
+++ b/EssentialAI/essentialai_huggingface_inference.ipynb
@@ -51,8 +51,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "fd7586a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chunk_text(text, max_char_per_doc=30000):\n",
+    "    if len(text) <= max_char_per_doc:\n",
+    "        return text\n",
+    "        \n",
+    "    chunk_size = max_char_per_doc // 3\n",
+    "    start = text[:chunk_size]\n",
+    "    \n",
+    "    middle_start = chunk_size \n",
+    "    middle_end = len(text) - chunk_size \n",
+    "    \n",
+    "    mid_point = random.randint(\n",
+    "        middle_start + chunk_size//2,\n",
+    "        middle_end - chunk_size//2\n",
+    "    )\n",
+    "    \n",
+    "    middle = text[mid_point - chunk_size//2:mid_point + chunk_size//2]\n",
+    "    end = text[-chunk_size:]\n",
+    "    return f\"[beginning]\\n{start}\\n[middle]\\n{middle}\\n[end]\\n{end}\"\n",
+    "\n",
+    "\n",
+    "def classify_document(text):\n",
+    "    chunked_text = chunk_text(text)\n",
+    "    \n",
+    "    messages = [\n",
+    "        {\"role\": \"system\", \"content\": \"taxonomy\"},\n",
+    "        {\"role\": \"user\", \"content\": chunked_text},\n",
+    "    ]\n",
+    "    \n",
+    "    prompt = tokenizer.apply_chat_template(\n",
+    "        messages,\n",
+    "        tokenize=False,\n",
+    "        add_generation_prompt=True\n",
+    "    )\n",
+    "    \n",
+    "    inputs = tokenizer(prompt, return_tensors=\"pt\").to(device)\n",
+    "    outputs = model.generate(**inputs, max_new_tokens=100)\n",
+    "    return tokenizer.decode(outputs[0], skip_special_tokens=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "30ae701b",
+   "id": "2e0d7450",
    "metadata": {},
    "outputs": [],
    "source": []
