--- a/EssentialAI/essentialai_huggingface_inference.ipynb
+++ b/EssentialAI/essentialai_huggingface_inference.ipynb
@@ -97,8 +97,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2e0d7450",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "system\n",
+      "taxonomy\n",
+      "user\n",
+      "\n",
+      "We prepare EAI-TAXONOMY Top Code (145B tokens) to target high-quality code \n",
+      "documentation that is technically correct and exhibits intermediate to \n",
+      "advanced reasoning (Algorithm 4). \n",
+      "In addition, we construct EAI-TAXONOMY Code w/ DCLM (564B tokens), \n",
+      "which combines taxonomy filters targeting code documentation and the DCLM\n",
+      "classifier, at the same threshold as DCLM-baseline, to filter for \n",
+      "instruction-dense documents (Algorithm 5). We add 51 - Mathematics to \n",
+      "EAI-TAXONOMY Code w/ DCLM because OpenCoder FW targets both web code\n",
+      "and mathematics.\n",
+      "\n",
+      "assistant\n",
+      "005.1,025.0285\n",
+      "3,2\n",
+      "2,skip\n",
+      "2,skip\n",
+      "0,0\n",
+      "0,0\n",
+      "8,10\n",
+      "3,4\n",
+      "4,5\n",
+      "4,3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example (paragraoh from the paper)\n",
+    "document_text = \"\"\"\n",
+    "We prepare EAI-TAXONOMY Top Code (145B tokens) to target high-quality code \n",
+    "documentation that is technically correct and exhibits intermediate to \n",
+    "advanced reasoning (Algorithm 4). \n",
+    "In addition, we construct EAI-TAXONOMY Code w/ DCLM (564B tokens), \n",
+    "which combines taxonomy filters targeting code documentation and the DCLM\n",
+    "classifier, at the same threshold as DCLM-baseline, to filter for \n",
+    "instruction-dense documents (Algorithm 5). We add 51 - Mathematics to \n",
+    "EAI-TAXONOMY Code w/ DCLM because OpenCoder FW targets both web code\n",
+    "and mathematics.\n",
+    "\"\"\"\n",
+    "\n",
+    "classification = classify_document(document_text)\n",
+    "print(classification)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1adda2b8",
    "metadata": {},
    "outputs": [],
    "source": []
