AEMatter: snapshot overview

--- a/AEMatter/aematter_inference.ipynb
+++ b/AEMatter/aematter_inference.ipynb
@@ -11,8 +11,15 @@
     "**Revisiting Context Aggregation for Image Matting**\n",
     "\n",
     " * Paper: https://arxiv.org/pdf/2304.01171\n",
-    "\n"
+    "\n",
+    "![AEMatter Overview](../assets/aematter_overview.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c18782a4",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
