AEMatter: download and save swin-transformer model

--- a/AEMatter/aematter_inference.ipynb
+++ b/AEMatter/aematter_inference.ipynb
@@ -25,26 +25,48 @@
     "```\n",
     "\n",
     "## Download the model\n",
-    " * AEMatter https://mega.nz/file/7N4AEKrS#L4h3Cm2qLMMbwBGm1lyGOmVDTXJwDMAi4BlBauqNHrI"
+    " * AEMatter https://mega.nz/file/7N4AEKrS#L4h3Cm2qLMMbwBGm1lyGOmVDTXJwDMAi4BlBauqNHrI\n",
+    "\n",
+    " * Also, download swin model from huggingface"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a1054a57",
+   "execution_count": null,
+   "id": "e3f7f5db",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/pyml/anaconda3/envs/py311/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/pyml/anaconda3/envs/py311/lib/python3.10/site-packages/timm/models/layers/__init__.py:48: FutureWarning: Importing from timm.models.layers is deprecated, please import via timm.layers\n",
-      "  warnings.warn(f\"Importing from {__name__} is deprecated, please import via timm.layers\", FutureWarning)\n"
+      "Model weights saved as swin_tiny_patch4_window7_224.pth\n"
      ]
     }
    ],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoModel, AutoImageProcessor\n",
+    "\n",
+    "# Load model and processor\n",
+    "model_name = \"microsoft/swin-tiny-patch4-window7-224\"\n",
+    "swin_model = AutoModel.from_pretrained(model_name)\n",
+    "processor = AutoImageProcessor.from_pretrained(model_name)\n",
+    "\n",
+    "# Save model as .pth\n",
+    "torch.save(\n",
+    "    {\"model\": swin_model.state_dict()},\n",
+    "    \"swin_tiny_patch4_window7_224.pth\"\n",
+    ")\n",
+    "print(\"Model weights saved as swin_tiny_patch4_window7_224.pth\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a1054a57",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -55,13 +77,15 @@
     "import torch\n",
     "\n",
     "sys.path.append(\"AEMatter_repo\")\n",
-    "import model"
+    "import model\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3cd84f8",
+   "id": "21d06b72",
    "metadata": {},
    "outputs": [],
    "source": []
