AEMatter: helper function run_model

--- a/AEMatter/aematter_inference.ipynb
+++ b/AEMatter/aematter_inference.ipynb
@@ -32,10 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e3f7f5db",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/py311/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -63,10 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "a1054a57",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/py311/lib/python3.11/site-packages/timm/models/layers/__init__.py:48: FutureWarning: Importing from timm.models.layers is deprecated, please import via timm.layers\n",
+      "  warnings.warn(f\"Importing from {__name__} is deprecated, please import via timm.layers\", FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -84,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "21d06b72",
    "metadata": {},
    "outputs": [
@@ -92,8 +109,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_19184/1294425331.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  torch.load('checkpoints/AEMFIX.ckpt', map_location='cpu'\n"
+      "/home/pyml/anaconda3/envs/py311/lib/python3.11/site-packages/torch/functional.py:554: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at /pytorch/aten/src/ATen/native/TensorShape.cpp:4314.)\n",
+      "  return _VF.meshgrid(tensors, **kwargs)  # type: ignore[attr-defined]\n"
      ]
     }
    ],
@@ -110,8 +127,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "4a316a86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1137, 1068, 1)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#rawimg=pimgs+file\n",
+    "image_path = \"../samples/plants.jpg\"\n",
+    "trimap_path = \"plants_trimap.png\"\n",
+    "\n",
+    "rawimg=cv2.imread(image_path)\n",
+    "trimap=cv2.imread(trimap_path, cv2.IMREAD_GRAYSCALE)\n",
+    "\n",
+    "def run_model(rawimg, trimap):\n",
+    "    trimap_nonp = trimap.copy()\n",
+    "    h, w, c = rawimg.shape\n",
+    "    nonph, nonpw, _ = rawimg.shape\n",
+    "    newh = (((h - 1) // 32) + 1) * 32\n",
+    "    neww = (((w - 1) // 32) + 1) * 32\n",
+    "    padh = newh - h\n",
+    "    padh1 = int(padh / 2)\n",
+    "    padh2 = padh - padh1\n",
+    "    padw = neww - w\n",
+    "    padw1 = int(padw / 2)\n",
+    "    padw2 = padw - padw1\n",
+    "    rawimg_pad = cv2.copyMakeBorder(\n",
+    "        rawimg, padh1, padh2, padw1, padw2, cv2.BORDER_REFLECT\n",
+    "    )\n",
+    "    trimap_pad = cv2.copyMakeBorder(\n",
+    "        trimap, padh1, padh2, padw1, padw2, cv2.BORDER_REFLECT\n",
+    "    )\n",
+    "    h_pad, w_pad, _ = rawimg_pad.shape\n",
+    "    tritemp = np.zeros([*trimap_pad.shape, 3], np.float32)\n",
+    "    tritemp[:, :, 0] = (trimap_pad == 0)\n",
+    "    tritemp[:, :, 1] = (trimap_pad == 128)\n",
+    "    tritemp[:, :, 2] = (trimap_pad == 255)\n",
+    "    tritempimgs = np.transpose(tritemp, (2, 0, 1))\n",
+    "    tritempimgs = tritempimgs[np.newaxis, :, :, :]\n",
+    "    img = np.transpose(rawimg_pad, (2, 0, 1))[np.newaxis, ::-1, :, :]\n",
+    "    img = np.array(img, np.float32)\n",
+    "    img = img / 255.\n",
+    "    img = torch.from_numpy(img).to(device)\n",
+    "    tritempimgs = torch.from_numpy(tritempimgs).to(device)\n",
+    "\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        pred = matmodel(img, tritempimgs)\n",
+    "        pred = pred.detach().cpu().numpy()[0]\n",
+    "        pred = pred[:, padh1: padh1 + h, padw1: padw1 + w]\n",
+    "        preda = pred[0: 1, ]*255\n",
+    "        preda = np.transpose(preda,(1,2,0))\n",
+    "        preda = preda*(trimap_nonp[:, :, None] == 128)+(trimap_nonp[: ,: , None]==255) * 255\n",
+    "    preda = np.array(preda, np.uint8)\n",
+    "\n",
+    "    return preda\n",
+    "\n",
+    "predicted_alpha_matte = run_model(rawimg, trimap)\n",
+    "\n",
+    "predicted_alpha_matte.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4400d9b6",
+   "id": "6725bd2a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -133,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
