--- a/LLaMA2/llama2_inference.ipynb
+++ b/LLaMA2/llama2_inference.ipynb
@@ -16,10 +16,9 @@
     "\n",
     "```bash\n",
     "git clone https://github.com/facebookresearch/llama/ llama_repo\n",
-    "\n",
     "```\n",
     "\n",
-    "\n",
+    "Folder structure:\n",
     "```bash\n",
     "llama_repo/\n",
     "├── CODE_OF_CONDUCT.md\n",
@@ -40,6 +39,13 @@
     "├── setup.py\n",
     "├── UPDATES.md\n",
     "└── USE_POLICY.md\n",
+    "```\n",
+    "\n",
+    "* Insrallation\n",
+    "```bash\n",
+    "pip install torch\n",
+    "cd llama_repo\n",
+    "pip install -e .\n",
     "```"
    ]
   }
