--- a/LLaMA2/llama2_inference.ipynb
+++ b/LLaMA2/llama2_inference.ipynb
@@ -48,11 +48,44 @@
     "pip install -e .\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed1febd4",
+   "metadata": {},
+   "source": [
+    " * Getting the model\n",
+    "\n",
+    "# Feel out the request form at https://www.llama.com/llama-downloads/\n",
+    "\n",
+    "![Llama Request Form](../assets/llama_request_form.png)\n",
+    "\n",
+    "```bash\n",
+    "pip install llama-stack -U\n",
+    "\n",
+    "llama download --source huggingface --model-id Llama-2-7b\n",
+    "# Successfully downloaded model to /home/pyml/.llama/checkpoints/Llama-2-7b\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "llama",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
