Llama2: inference -- text completion

--- a/LLaMA2/llama2_inference.ipynb
+++ b/LLaMA2/llama2_inference.ipynb
@@ -131,13 +131,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded in 7.99 seconds\n"
+      "Loaded in 6.28 seconds\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<llama.generation.Llama at 0x7fd433d69220>"
+       "<llama.generation.Llama at 0x7fc53c4666c0>"
       ]
      },
      "execution_count": 2,
@@ -150,7 +150,11 @@
     "ckpt_dir = os.path.join(os.path.expanduser(\"~\"), \".llama\", \"checkpoints\", \"Llama-2-7b\")\n",
     "tokenizer_path = os.path.join(ckpt_dir, \"tokenizer.model\")\n",
     "max_seq_len = 128\n",
-    "max_batch_size = 1\n",
+    "max_batch_size = 4\n",
+    "max_gen_len = 64\n",
+    "top_p = 0.95\n",
+    "temperature = 0.6\n",
+    "\n",
     "\n",
     "generator = Llama.build(\n",
     "    ckpt_dir=ckpt_dir,\n",
@@ -164,8 +168,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cc6e9b7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The capital of France is \n",
+      "> 1000 years old and is one of the most popular tourist destinations in the world. It is the most visited city in the world and it is famous for its museums, monuments, theaters, and historical buildings.\n",
+      "The city is located on the River Seine, which divides it into two\n",
+      "\n",
+      "==================================\n",
+      "\n",
+      "The largest mammal in the world is \n",
+      "> 10 meters (33 feet) long and weighs 150 tons (136 metric tons). This massive beast is the blue whale.\n",
+      "The blue whale is the largest animal that ever lived. Scientists say it is the biggest animal ever to have existed on Earth.\n",
+      "\n",
+      "\n",
+      "==================================\n",
+      "\n",
+      "The process of photosynthesis occurs in \n",
+      "> 2 stages. The first stage is the light dependent stage. During the light dependent stage the light energy is converted into chemical energy. The second stage is the light independent stage. During the light independent stage the chemical energy is converted into ATP and NADPH.\n",
+      "Photosynthesis is the process by which plants convert\n",
+      "\n",
+      "==================================\n",
+      "\n",
+      "The chemical symbol for gold is \n",
+      "> 197. It is a precious metal that is used as a currency.\n",
+      "Gold is one of the most precious metals in the world. It is used as a currency and has been used for thousands of years. Gold is also used in jewelry and other decorative items.\n",
+      "\n",
+      "\n",
+      "==================================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompts = [\n",
+    "    \"The capital of France is \",\n",
+    "    \"The largest mammal in the world is \",\n",
+    "    \"The process of photosynthesis occurs in \",\n",
+    "    \"The chemical symbol for gold is \",\n",
+    "]\n",
+    "\n",
+    "results = generator.text_completion(\n",
+    "    prompts,\n",
+    "    max_gen_len=max_gen_len,\n",
+    "    temperature=temperature,\n",
+    "    top_p=top_p,\n",
+    ")\n",
+    "\n",
+    "for prompt, result in zip(prompts, results):\n",
+    "    print(prompt)\n",
+    "    print(f\"> {result['generation']}\")\n",
+    "    print(\"\\n==================================\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2931e4fc",
    "metadata": {},
    "outputs": [],
    "source": []
