--- a/LISA/lisa_inference.ipynb
+++ b/LISA/lisa_inference.ipynb
@@ -16,6 +16,21 @@
     "\n",
     "```bash\n",
     "git clone https://github.com/dvlab-research/LISA.git lisa_repo\n",
+    "\n",
+    "# ubuntu 20.04, nvidia cuda 12.2\n",
+    "# modeify requirements:\n",
+    "# comment #--extra-index-url https://download.pytorch.org/whl/cu117\n",
+    "# torch==2.1.2\n",
+    "```\n",
+    "\n",
+    " * **Installation:**\n",
+    "```bash\n",
+    "conda create -n lisa python=3.10 -y\n",
+    "conda activate lisa\n",
+    "\n",
+    "cv lisa_repo/\n",
+    "pip install -r requirements.txt\n",
+    "# note: cannot install flash-attn on ubuntu 20.04\n",
     "```"
    ]
   },
@@ -23,7 +38,9 @@
    "cell_type": "markdown",
    "id": "d1713c15",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
