LISA: loading the model

--- a/LISA/lisa_inference.ipynb
+++ b/LISA/lisa_inference.ipynb
@@ -35,17 +35,187 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d1713c15",
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ac0816eb",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/lisa/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "import cv2\n",
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from transformers import AutoTokenizer, BitsAndBytesConfig, CLIPImageProcessor\n",
+    "\n",
+    "sys.path.append(\"lisa_repo\")\n",
+    "from model.LISA import LISAForCausalLM\n",
+    "from model.llava import conversation as conversation_lib\n",
+    "from model.llava.mm_utils import tokenizer_image_token\n",
+    "from model.segment_anything.utils.transforms import ResizeLongestSide\n",
+    "from utils.utils import (\n",
+    "    DEFAULT_IM_END_TOKEN, DEFAULT_IM_START_TOKEN,\n",
+    "    DEFAULT_IMAGE_TOKEN, IMAGE_TOKEN_INDEX\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b582efe9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set the variables according to this argument parser defaults:\n",
+    "\n",
+    "VERSION = \"xinlai/LISA-13B-llama2-v1\"\n",
+    "OUTPUT_PATH = \"./vis_output\"\n",
+    "PRECISION = \"bf16\"\n",
+    "IMAGE_SIZE = 1024\n",
+    "MODEL_MAX_LENGTH = 512\n",
+    "LORA_R = 8\n",
+    "VISION_TOWER = \"openai/clip-vit-large-patch14\"\n",
+    "LOCAL_RANK = 0\n",
+    "LOAD_IN_8BIT = True  # to save memory\n",
+    "LOAD_IN_4BIT = False\n",
+    "USE_MM_START_END = True\n",
+    "CONV_TYPE = \"llava_v1\"  # choices: llava_v1 llava_llama_2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "70759eaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/lisa/lib/python3.10/site-packages/huggingface_hub/file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "You are using the legacy behaviour of the <class 'transformers.models.llama.tokenization_llama.LlamaTokenizer'>. This means that tokens that come after special tokens will not be properly handled. We recommend you to read the related pull request available at https://github.com/huggingface/transformers/pull/24565\n",
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:14<00:00,  4.68s/it]\n",
+      "/home/pyml/anaconda3/envs/lisa/lib/python3.10/site-packages/huggingface_hub/file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
+      "  warnings.warn(\n",
+      "You shouldn't move a model that is dispatched using accelerate hooks.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create model\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\n",
+    "    VERSION,\n",
+    "    cache_dir=None,\n",
+    "    model_max_length=MODEL_MAX_LENGTH,\n",
+    "    padding_side=\"right\",\n",
+    "    use_fast=False,\n",
+    ")\n",
+    "\n",
+    "tokenizer.pad_token = tokenizer.unk_token\n",
+    "seg_token_idx = tokenizer(\n",
+    "    \"[SEG]\", add_special_tokens=False\n",
+    ").input_ids[0]\n",
+    "\n",
+    "\n",
+    "torch_dtype = torch.float32\n",
+    "if PRECISION == \"bf16\":\n",
+    "    torch_dtype = torch.bfloat16\n",
+    "elif PRECISION == \"fp16\":\n",
+    "    torch_dtype = torch.half\n",
+    "\n",
+    "kwargs = {\"torch_dtype\": torch_dtype}\n",
+    "if LOAD_IN_4BIT:\n",
+    "    kwargs.update(\n",
+    "        {\n",
+    "            \"torch_dtype\": torch.half,\n",
+    "            \"load_in_4bit\": True,\n",
+    "            \"quantization_config\": BitsAndBytesConfig(\n",
+    "                load_in_4bit=True,\n",
+    "                bnb_4bit_compute_dtype=torch.float16,\n",
+    "                bnb_4bit_use_double_quant=True,\n",
+    "                bnb_4bit_quant_type=\"nf4\",\n",
+    "                llm_int8_skip_modules=[\"visual_model\"],\n",
+    "            ),\n",
+    "        }\n",
+    "    )\n",
+    "elif LOAD_IN_8BIT:\n",
+    "    kwargs.update(\n",
+    "        {\n",
+    "            \"torch_dtype\": torch.half,\n",
+    "            \"quantization_config\": BitsAndBytesConfig(\n",
+    "                llm_int8_skip_modules=[\"visual_model\"],\n",
+    "                load_in_8bit=True,\n",
+    "            ),\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "model = LISAForCausalLM.from_pretrained(\n",
+    "    VERSION, low_cpu_mem_usage=True,\n",
+    "    vision_tower=VISION_TOWER,\n",
+    "    seg_token_idx=seg_token_idx,\n",
+    "    **kwargs\n",
+    ")\n",
+    "\n",
+    "model.config.eos_token_id = tokenizer.eos_token_id\n",
+    "model.config.bos_token_id = tokenizer.bos_token_id\n",
+    "model.config.pad_token_id = tokenizer.pad_token_id\n",
+    "\n",
+    "model.get_model().initialize_vision_modules(model.get_model().config)\n",
+    "vision_tower = model.get_model().get_vision_tower()\n",
+    "vision_tower.to(dtype=torch_dtype)\n",
+    "\n",
+    "if PRECISION == \"bf16\":\n",
+    "    model = model.bfloat16().cuda()\n",
+    "elif PRECISION == \"fp32\":\n",
+    "    model = model.float().cuda()\n",
+    "\n",
+    "vision_tower = model.get_model().get_vision_tower()\n",
+    "vision_tower.to(device=LOCAL_RANK)\n",
+    "\n",
+    "clip_image_processor = CLIPImageProcessor.from_pretrained(model.config.vision_tower)\n",
+    "transform = ResizeLongestSide(IMAGE_SIZE)\n",
+    "\n",
+    "model.eval();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "164daf02",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "lisa",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
