--- a/LISA/lisa_inference.ipynb
+++ b/LISA/lisa_inference.ipynb
@@ -53,7 +53,7 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "import cv2\n",
+    "from PIL import Image\n",
     "import numpy as np\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
@@ -106,7 +106,7 @@
       "/home/pyml/anaconda3/envs/lisa/lib/python3.10/site-packages/huggingface_hub/file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n",
       "You are using the legacy behaviour of the <class 'transformers.models.llama.tokenization_llama.LlamaTokenizer'>. This means that tokens that come after special tokens will not be properly handled. We recommend you to read the related pull request available at https://github.com/huggingface/transformers/pull/24565\n",
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:14<00:00,  4.68s/it]\n",
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:13<00:00,  4.47s/it]\n",
       "/home/pyml/anaconda3/envs/lisa/lib/python3.10/site-packages/huggingface_hub/file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n",
       "You shouldn't move a model that is dispatched using accelerate hooks.\n"
@@ -188,6 +188,56 @@
     "transform = ResizeLongestSide(IMAGE_SIZE)\n",
     "\n",
     "model.eval();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "81fff75f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEFAULT_IM_END_TOKEN: <im_end>\n",
+      "DEFAULT_IM_START_TOKEN: <im_start>\n",
+      "DEFAULT_IMAGE_TOKEN: <image>\n",
+      "IMAGE_TOKEN_INDEX: -200\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"DEFAULT_IM_END_TOKEN:\", DEFAULT_IM_END_TOKEN)\n",
+    "print(\"DEFAULT_IM_START_TOKEN:\", DEFAULT_IM_START_TOKEN)\n",
+    "print(\"DEFAULT_IMAGE_TOKEN:\", DEFAULT_IMAGE_TOKEN)\n",
+    "print(\"IMAGE_TOKEN_INDEX:\", IMAGE_TOKEN_INDEX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "63d70f04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PIXEL_MEAN = torch.Tensor([123.675, 116.28, 103.53]).view(-1, 1, 1)\n",
+    "PIXEL_STD = torch.Tensor([58.395, 57.12, 57.375]).view(-1, 1, 1)\n",
+    "\n",
+    "def preprocess(\n",
+    "        x,\n",
+    "        pixel_mean=PIXEL_MEAN, pixel_std=PIXEL_STD,\n",
+    "        img_size=1024,\n",
+    "    ) -> torch.Tensor:\n",
+    "    \"\"\"Normalize pixel values and pad to a square input.\"\"\"\n",
+    "    # Normalize colors\n",
+    "    x = (x - pixel_mean) / pixel_std\n",
+    "    # Pad\n",
+    "    h, w = x.shape[-2:]\n",
+    "    padh = img_size - h\n",
+    "    padw = img_size - w\n",
+    "    x = F.pad(x, (0, padw, 0, padh))\n",
+    "    return x\n"
    ]
   },
   {
