--- a/LISA/lisa_inference.ipynb
+++ b/LISA/lisa_inference.ipynb
@@ -78,11 +78,13 @@
    "outputs": [],
    "source": [
     "# set the variables according to this argument parser defaults:\n",
-    "\n",
+    "# CUDA_VISIBLE_DEVICES=0 python chat.py \\\n",
+    "# --version='xinlai/LISA-13B-llama2-v1' \\\n",
+    "# --precision='fp16' --load_in_8bit\n",
     "VERSION = \"xinlai/LISA-13B-llama2-v1\"\n",
     "OUTPUT_PATH = \"./vis_output\"\n",
-    "PRECISION = \"bf16\"\n",
-    "IMAGE_SIZE = 1024\n",
+    "PRECISION = \"fp16\"\n",
+    "IMAGE_SIZE = 768\n",
     "MODEL_MAX_LENGTH = 512\n",
     "LORA_R = 8\n",
     "VISION_TOWER = \"openai/clip-vit-large-patch14\"\n",
@@ -106,10 +108,9 @@
       "/home/pyml/anaconda3/envs/lisa/lib/python3.10/site-packages/huggingface_hub/file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
       "  warnings.warn(\n",
       "You are using the legacy behaviour of the <class 'transformers.models.llama.tokenization_llama.LlamaTokenizer'>. This means that tokens that come after special tokens will not be properly handled. We recommend you to read the related pull request available at https://github.com/huggingface/transformers/pull/24565\n",
-      "Loading checkpoint shards: 100%|██████████| 3/3 [00:13<00:00,  4.47s/it]\n",
+      "Loading checkpoint shards: 100%|██████████| 3/3 [00:13<00:00,  4.48s/it]\n",
       "/home/pyml/anaconda3/envs/lisa/lib/python3.10/site-packages/huggingface_hub/file_download.py:943: FutureWarning: `resume_download` is deprecated and will be removed in version 1.0.0. Downloads always resume when possible. If you want to force a new download, use `force_download=True`.\n",
-      "  warnings.warn(\n",
-      "You shouldn't move a model that is dispatched using accelerate hooks.\n"
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -178,6 +179,21 @@
     "\n",
     "if PRECISION == \"bf16\":\n",
     "    model = model.bfloat16().cuda()\n",
+    "elif (\n",
+    "    PRECISION == \"fp16\" and (not LOAD_IN_4BIT) and (not LOAD_IN_8BIT)\n",
+    "):\n",
+    "    vision_tower = model.get_model().get_vision_tower()\n",
+    "    model.model.vision_tower = None\n",
+    "    import deepspeed\n",
+    "\n",
+    "    model_engine = deepspeed.init_inference(\n",
+    "        model=model,\n",
+    "        dtype=torch.half,\n",
+    "        replace_with_kernel_inject=True,\n",
+    "        replace_method=\"auto\",\n",
+    "    )\n",
+    "    model = model_engine.module\n",
+    "    model.model.vision_tower = vision_tower.half().cuda()\n",
     "elif PRECISION == \"fp32\":\n",
     "    model = model.float().cuda()\n",
     "\n",
@@ -242,8 +258,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "164daf02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_inference(image_path, prompt):\n",
+    "    conv = conversation_lib.conv_templates[CONV_TYPE].copy()\n",
+    "    conv.messages = []\n",
+    "\n",
+    "    prompt = DEFAULT_IMAGE_TOKEN + \"\\n\" + prompt\n",
+    "    print(f\"Prompt: {prompt}\")\n",
+    "    if USE_MM_START_END:\n",
+    "        replace_token = (\n",
+    "            DEFAULT_IM_START_TOKEN + DEFAULT_IMAGE_TOKEN + DEFAULT_IM_END_TOKEN\n",
+    "        )\n",
+    "        prompt = prompt.replace(DEFAULT_IMAGE_TOKEN, replace_token)\n",
+    "\n",
+    "    conv.append_message(conv.roles[0], prompt)\n",
+    "    conv.append_message(conv.roles[1], \"\")\n",
+    "    prompt = conv.get_prompt()\n",
+    "    print(f\"Prompt: {prompt}\")\n",
+    "\n",
+    "    if not os.path.exists(image_path):\n",
+    "        print(\"File not found in {}\".format(image_path))\n",
+    "        return\n",
+    "\n",
+    "    img = Image.open(image_path).convert(\"RGB\")\n",
+    "    image_np = np.array(img)\n",
+    "    original_size_list = [image_np.shape[:2]]\n",
+    "\n",
+    "    image_clip = (\n",
+    "        clip_image_processor.preprocess(image_np, return_tensors=\"pt\")[\n",
+    "            \"pixel_values\"\n",
+    "        ][0]\n",
+    "        .unsqueeze(0)\n",
+    "        .cuda()\n",
+    "    )\n",
+    "    print(\"image_clip.shape: \", image_clip.shape)\n",
+    "    if PRECISION == \"bf16\":\n",
+    "        image_clip = image_clip.bfloat16()\n",
+    "    elif PRECISION == \"fp16\":\n",
+    "        image_clip = image_clip.half()\n",
+    "    else:\n",
+    "        image_clip = image_clip.float()\n",
+    "\n",
+    "    image = transform.apply_image(image_np)\n",
+    "    resize_list = [image.shape[:2]]\n",
+    "\n",
+    "    image = preprocess(\n",
+    "        torch.from_numpy(image).permute(2, 0, 1).contiguous()\n",
+    "    ).unsqueeze(0).cuda()\n",
+    "    \n",
+    "    if PRECISION == \"bf16\":\n",
+    "        image = image.bfloat16()\n",
+    "    elif PRECISION == \"fp16\":\n",
+    "        image = image.half()\n",
+    "    else:\n",
+    "        image = image.float()\n",
+    "\n",
+    "    input_ids = tokenizer_image_token(prompt, tokenizer, return_tensors=\"pt\")\n",
+    "    input_ids = input_ids.unsqueeze(0).cuda()\n",
+    "    print(\"input_ids.shape: \", input_ids.shape)\n",
+    "\n",
+    "    output_ids, pred_masks = model.evaluate(\n",
+    "        image_clip,\n",
+    "        image,\n",
+    "        input_ids,\n",
+    "        resize_list,\n",
+    "        original_size_list,\n",
+    "        max_new_tokens=512,\n",
+    "        tokenizer=tokenizer,\n",
+    "    )\n",
+    "    print(\"output_ids.shape: \", output_ids.shape)\n",
+    "    print(\"pred_masks: \", len(pred_masks), [m.shape for m in pred_masks])\n",
+    "    output_ids = output_ids[0][output_ids[0] != IMAGE_TOKEN_INDEX]\n",
+    "\n",
+    "    text_output = tokenizer.decode(output_ids, skip_special_tokens=False)\n",
+    "    text_output = text_output.replace(\"\\n\", \"\").replace(\"  \", \" \")\n",
+    "    print(\"text_output: \", text_output)\n",
+    "\n",
+    "    return text_output, pred_masks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "94109c31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prompt: <image>\n",
+      "Segment the plant on thr right side of the image.\n",
+      "Prompt: A chat between a curious human and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the human's questions. USER: <im_start><image><im_end>\n",
+      "Segment the plant on thr right side of the image. ASSISTANT:\n",
+      "image_clip.shape:  torch.Size([1, 3, 224, 224])\n",
+      "input_ids.shape:  torch.Size([1, 54])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/pyml/anaconda3/envs/lisa/lib/python3.10/site-packages/transformers/generation/utils.py:1270: UserWarning: You have modified the pretrained model configuration to control generation. This is a deprecated strategy to control generation and will be removed soon, in a future version. Please use a generation configuration file (see https://huggingface.co/docs/transformers/main_classes/text_generation )\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "output_ids.shape:  torch.Size([1, 59])\n",
+      "pred_masks:  1 [torch.Size([1, 1137, 1068])]\n",
+      "text_output:  <s>A chat between a curious human and an artificial intelligence assistant. The assistant gives helpful, detailed, and polite answers to the human's questions. USER: <im_start> <im_end> Segment the plant on thr right side of the image. ASSISTANT: Sure, [SEG] .</s>\n"
+     ]
+    }
+   ],
+   "source": [
+    "image_path = \"../samples/plants.jpg\"\n",
+    "prompt = \"Segment the plant on thr right side of the image.\"\n",
+    "\n",
+    "text_output, pred_masks = run_inference(image_path, prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b0ce9ed",
    "metadata": {},
    "outputs": [],
    "source": []
